.kubernetes/aws/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: py-ml-gateway-allow-all-traffic
  namespace: test-a
spec:
  podSelector:
    matchLabels:
      app: py-ml-gateway
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: test-a
